Final version FIX ALL