@@ -6,14 +6,14 @@ import java.util.Scanner;
 
 public class CaesarParamReader {
 
-    private static final String keyInputMessage = "Введите ключ шифрования, по умолчанию - 1:";
-    private static final String fromPathInputMessage = "Введите путь, откуда вы хотите считать данные или нажмите enter, чтобы выбрать ";
-    private static final String dictPathInputMessage = "Введите путь к словарю или нажмите enter, чтобы выбрать ";
-    private static final String encodedPathInputMessage = "Введите путь к зашифрованному файлу или нажмите enter, чтобы выбрать ";
-    private static final String decodedPathInputMessage = "Введите путь к расшифрованному файлу или нажмите enter, чтобы выбрать ";
-    private static final Path defaultDictPath = Path.of("text", "dict.txt");
-    private static final Path defaultEncodedPath = Path.of("text", "encrypted.txt");
-    private static final Path defaultDecodedPath = Paths.get("text", "decrypted.txt");
+    private static final String KEY_INPUT_MESSAGE = "Введите ключ шифрования, по умолчанию - 1:";
+    private static final String FROM_PATH_INPUT_MESSAGE = "Введите путь, откуда вы хотите считать данные или нажмите enter, чтобы выбрать ";
+    private static final String DICT_PATH_INPUT_MESSAGE = "Введите путь к словарю или нажмите enter, чтобы выбрать ";
+    private static final String ENCODED_PATH_INPUT_MESSAGE = "Введите путь к зашифрованному файлу или нажмите enter, чтобы выбрать ";
+    private static final String DECODED_PATH_INPUT_MESSAGE = "Введите путь к расшифрованному файлу или нажмите enter, чтобы выбрать ";
+    private static final Path DEFAULT_DICT_PATH = Path.of("text", "dict.txt");
+    private static final Path DEFAULT_ENCODED_PATH = Path.of("text", "encrypted.txt");
+    private static final Path DEFAULT_DECODED_PATH = Paths.get("text", "decrypted.txt");
 
     private final Scanner consoleScanner = new Scanner(System.in);
 
@@ -33,7 +33,7 @@ public class CaesarParamReader {
     }
 
     protected int getKeyFromUser() {
-        System.out.print(keyInputMessage);
+        System.out.print(KEY_INPUT_MESSAGE);
         try {
             int inputKey = Integer.parseInt(consoleScanner.nextLine());
             if (inputKey != 0) {
@@ -41,29 +41,28 @@ public class CaesarParamReader {
             }
             return key;
         } catch (NumberFormatException e) {
-            // FIXME ?? Интерфейс польз должен быть на одном языке
-            throw new RuntimeException("Error: not a number");
+            throw new RuntimeException("Ошибка, введите число");
         }
     }
 
     protected Path getFromPathFromUser(Path defaultFrom) {
-        System.out.println(fromPathInputMessage + defaultFrom.getFileName());
+        System.out.println(FROM_PATH_INPUT_MESSAGE + defaultFrom.getFileName());
         return getPath(defaultFrom);
     }
 
     protected Path getDictFromUser() {
-        System.out.println(dictPathInputMessage + defaultDictPath.getFileName());
-        return getPath(defaultDictPath);
+        System.out.println(DICT_PATH_INPUT_MESSAGE + DEFAULT_DICT_PATH.getFileName());
+        return getPath(DEFAULT_DICT_PATH);
     }
 
     protected Path getEncodedFromUser() {
-        System.out.println(encodedPathInputMessage + defaultEncodedPath.getFileName());
-        return getPath(defaultEncodedPath);
+        System.out.println(ENCODED_PATH_INPUT_MESSAGE + DEFAULT_ENCODED_PATH.getFileName());
+        return getPath(DEFAULT_ENCODED_PATH);
     }
 
     protected Path getDecodedFromUser() {
-        System.out.println(decodedPathInputMessage + defaultDecodedPath.getFileName());
-        return getPath(defaultDecodedPath);
+        System.out.println(DECODED_PATH_INPUT_MESSAGE + DEFAULT_DECODED_PATH.getFileName());
+        return getPath(DEFAULT_DECODED_PATH);
     }
 
 }
